packages/frontend/tests/type_errors/invalid_literal.nemo
global x = 1000000000000000000000000000000000000000000000000000000000000